8271234: [lworld] InlineTypeBaseNode::merge_with fails with assert(i < _cnt)